syntax = "proto3";

package test.bazel.proto;

import "test/proto/common/pizza.proto";
import "test/proto/common/delivery_person.proto";

service PizzaService {
  rpc OrderPizza(OrderPizzaRequest) returns (OrderPizzaResponse) {
  }
}

message OrderPizzaRequest {
  // The list of pizzas to order.
  repeated Pizza pizzas = 1;
  optional string toppings = 2;
}

message OrderPizzaResponse {
  // The person that will deliver the pizza.
  DeliveryPerson delivery_person = 1;
}
